cute lil palette :3

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,10 +1,8 @@
 [colors]
-background = #f4202020
-foreground = #c5c5c5
-primary = #8595ac
-secondary = #d1dded
-tertiary = #a7b0bd
-quarternary = #2f343a
+background = #fa151515
+foreground = #d8d0d5
+primary = #d895ee
+secondary = #cf7fea
 
 [bar/cat]
 font-0 = Sarasa Term J:size=12;3
@@ -27,21 +25,21 @@ modules-center = playerctl
 modules-right = lb cpu memory pulseaudio clock rb
 
 tray-position = right
-tray-background = ${colors.primary}
+tray-background = ${colors.background}
 
 [module/bspwm]
 type = internal/bspwm
 
 label-focused = " %name% "
-label-focused-foreground = ${colors.quarternary}
-label-focused-background = ${colors.primary}
+label-focused-foreground = ${colors.background}
+label-focused-background = ${colors.secondary}
 
 label-occupied = " %name% "
-label-occupied-foreground = ${colors.secondary}
-label-occupied-background = ${colors.quarternary}
+label-occupied-foreground = ${colors.background}
+label-occupied-background = ${colors.primary}
 
 label-empty = " %name% "
-label-empty-foreground = ${colors.tertiary}
+label-empty-foreground = ${colors.foreground}
 
 [module/playerctl]
 type = custom/script
@@ -55,23 +53,23 @@ click-middle = playerctl previous
 [module/cpu]
 type = internal/cpu
 interval = 5
-label = " %{F#8595ac}:cpu %{F#d1dded}%percentage% "
+label = " %{F#d895ee}:cpu %{F#d8d0d5}%percentage%,"
 
 [module/memory]
 type = custom/script
 interval = 5
-exec = awk '/MemFree:/ { printf " %{F#8595ac}:free %{F#d1dded}%.2f ", ($2 / 1000 / 1000) }' /proc/meminfo
+exec = awk '/MemFree:/ { printf " %{F#ee95d2}:free %{F#d8d0d5}%.2f,", ($2 / 1000 / 1000) }' /proc/meminfo
 
 [module/pulseaudio]
 type = internal/pulseaudio
-label-volume = " %{F#8595ac}:vol %{F#d1dded}%percentage% "
-label-muted = " %{F#8595ac}:vol %{F#a7b0bd}nil "
+label-volume = " %{F#d895ee}:vol %{F#d8d0d5}%percentage%,"
+label-muted = " %{F#d895ee}:vol %{F#d8d0d5}nil,"
 click-right = pavucontrol
 
 [module/clock]
 type = internal/date
 
-date = " %{F#8595ac}:time %{F#d1dded}"%a %b %d %H:%M" "
+date = " %{F#ee95d2}:time %{F#d8d0d5}"%a %b %d %H:%M" "
 
 [module/lb]
 type = custom/text
