--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,12 +1,19 @@
 window:
     padding: { x: 2, y: 2 }
-    opacity: 0.96
+    opacity: 0.98
 
 font:
-    normal: { family: Sarasa Term J }
-    bold: { style: Regular }
-    italic: { style: Regular }
-    bold_italic: { style: Regular }
+    normal:
+        family: Sarasa Term J
+    bold:
+        family: Sarasa Term J
+        style: Regular
+    italic:
+        family: Sarasa Term J
+        style: Regular
+    bold_italic:
+        family: Sarasa Term J
+        style: Regular
     size: 8.0
 
 cursor:
@@ -15,35 +22,25 @@ cursor:
 
 colors:
     primary:
-        background: "#202020"
-        foreground: "#c5c5c5"
+        background: "#151515"
+        foreground: "#d8d0d5"
 
     normal:
-        black: "#3b4252"
-        red: "#bf616a"
-        green: "#a3be8c"
-        yellow: "#ebcb8b"
-        blue: "#81a1c1"
-        magenta: "#b48ead"
-        cyan: "#88c0d0"
-        white: "#e5e9f0"
+        black: "#151515"
+        red: "#ee9598"
+        green: "#9be099"
+        yellow: "#e8d097"
+        blue: "#979ae8"
+        magenta: "#ca97e8"
+        cyan: "#97d0e8"
+        white: "#fcf0f8"
 
     bright:
-        black: "#4c566a"
-        red: "#bf616a"
-        green: "#a3be8c"
-        yellow: "#ebcb8b"
-        blue: "#81a1c1"
-        magenta: "#b48ead"
-        cyan: "#8fbcbb"
-        white: "#eceff4"
-
-    dim:
-        black: "#373e4d"
-        red: "#94545d"
-        green: "#809575"
-        yellow: "#b29e75"
-        blue: "#68809a"
-        magenta: "#8c738c"
-        cyan: "#6d96a5"
-        white: "#aeb3bb"
+        black: "#808080"
+        red: "#ee9598"
+        green: "#9be099"
+        yellow: "#e8d097"
+        blue: "#979ae8"
+        magenta: "#ca97e8"
+        cyan: "#97d0e8"
+        white: "#fcf0f8"
