--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -2,7 +2,8 @@
 background = #fa151515
 foreground = #d8d0d5
 primary = #d895ee
-secondary = #cf7fea
+secondary = #ee95d2
+muted = #909090
 
 [bar/cat]
 font-0 = Sarasa Term J:size=12;3
@@ -11,7 +12,7 @@ height = 26pt
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 4
+line-size = 2
 line-color = ${colors.primary}
 
 wm-restack = bspwm
@@ -20,26 +21,30 @@ border-left-size = 8
 border-right-size = 8
 border-top-size = 8
 
+module-margin-right = 1
+
 modules-left = bspwm
 modules-center = playerctl
 modules-right = lb cpu memory pulseaudio clock rb
 
 tray-position = right
-tray-background = ${colors.background}
+tray-background = #383838
 
 [module/bspwm]
 type = internal/bspwm
 
 label-focused = " %name% "
 label-focused-foreground = ${colors.background}
-label-focused-background = ${colors.secondary}
+label-focused-background = ${colors.primary}
 
 label-occupied = " %name% "
-label-occupied-foreground = ${colors.background}
-label-occupied-background = ${colors.primary}
 
 label-empty = " %name% "
-label-empty-foreground = ${colors.foreground}
+label-empty-foreground = ${colors.muted}
+
+label-urgent = " ! "
+label-urgent-foreground = ${colors.background}
+label-urgent-background = ${colors.secondary}
 
 [module/playerctl]
 type = custom/script
@@ -53,31 +58,52 @@ click-middle = playerctl previous
 [module/cpu]
 type = internal/cpu
 interval = 5
-label = " %{F#d895ee}:cpu %{F#d8d0d5}%percentage%,"
+label = %percentage%
+format-prefix = ":cpu "
+format-prefix-foreground = ${colors.primary}
+format-suffix = ,
+format-suffix-foreground = ${colors.muted}
 
 [module/memory]
 type = custom/script
 interval = 5
-exec = awk '/MemFree:/ { printf " %{F#ee95d2}:free %{F#d8d0d5}%.2f,", ($2 / 1000 / 1000) }' /proc/meminfo
+exec = awk '/MemFree:/ { printf "%.2f", ($2 / 1000 / 1000) }' /proc/meminfo
+format-prefix = ":free "
+format-prefix-foreground = ${colors.secondary}
+format-suffix = ,
+format-suffix-foreground = ${colors.muted}
 
 [module/pulseaudio]
 type = internal/pulseaudio
-label-volume = " %{F#d895ee}:vol %{F#d8d0d5}%percentage%,"
-label-muted = " %{F#d895ee}:vol %{F#d8d0d5}nil,"
+label-volume = %percentage%
+label-muted = nil
+format-volume-prefix = ":vol "
+format-volume-prefix-foreground = ${colors.primary}
+format-volume-suffix = ,
+format-volume-suffix-foreground = ${colors.muted}
+format-muted-prefix = ":vol "
+format-muted-prefix-foreground = ${colors.primary}
+format-muted-suffix = ,
+format-muted-suffix-foreground = ${colors.muted}
 click-right = pavucontrol
 
 [module/clock]
 type = internal/date
 
-date = " %{F#ee95d2}:time %{F#d8d0d5}"%a %b %d %H:%M" "
+date = ""%a %b %d %H:%M""
+format-prefix = ":time "
+format-prefix-foreground = ${colors.secondary}
 
 [module/lb]
 type = custom/text
 content = " {"
+content-foreground = #909090
 
 [module/rb]
 type = custom/text
 content = "} "
+content-foreground = #909090
 
 [settings]
 screenchange-reload = true
+pseudo-transparency = true
