--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -21,6 +21,7 @@ cursor:
         blinking: on
 
 colors:
+    transparent_background_colors: true
     primary:
         background: "#151515"
         foreground: "#d8d0d5"
