--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -21,11 +21,12 @@ border-left-size = 8
 border-right-size = 8
 border-top-size = 8
 
-module-margin-right = 1
+module-margin-right = 2
+padding-right = 2
 
 modules-left = bspwm
 modules-center = playerctl
-modules-right = lb cpu memory pulseaudio clock rb
+modules-right = cpu memory pulseaudio clock
 
 tray-position = right
 tray-background = #383838
@@ -54,55 +55,35 @@ tail = true
 click-left = playerctl play-pause
 click-right = playerctl next
 click-middle = playerctl previous
+scroll-up = playerctl volume 0.05+
+scroll-down = playerctl volume 0.05-
 
 [module/cpu]
 type = internal/cpu
 interval = 5
-label = %percentage%
-format-prefix = ":cpu "
-format-prefix-foreground = ${colors.primary}
-format-suffix = ,
-format-suffix-foreground = ${colors.muted}
+format = <label>
+label = %percentage%%
+format-underline = #e8b197
 
 [module/memory]
 type = custom/script
 interval = 5
-exec = awk '/MemFree:/ { printf "%.2f", ($2 / 1000 / 1000) }' /proc/meminfo
-format-prefix = ":free "
-format-prefix-foreground = ${colors.secondary}
-format-suffix = ,
-format-suffix-foreground = ${colors.muted}
+exec = awk '/MemFree:/ { printf "%.2fG", ($2 / 1000 / 1000) }' /proc/meminfo
+format-underline = #e8d097
 
 [module/pulseaudio]
 type = internal/pulseaudio
-label-volume = %percentage%
-label-muted = nil
-format-volume-prefix = ":vol "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume-suffix = ,
-format-volume-suffix-foreground = ${colors.muted}
-format-muted-prefix = ":vol "
-format-muted-prefix-foreground = ${colors.primary}
-format-muted-suffix = ,
-format-muted-suffix-foreground = ${colors.muted}
+label-volume = %percentage%%dB
+label-muted = %percentage%%dB
+format-volume-underline = #9be099
+format-muted-foreground = ${colors.muted}
 click-right = pavucontrol
 
 [module/clock]
 type = internal/date
 
-date = ""%a %b %d %H:%M""
-format-prefix = ":time "
-format-prefix-foreground = ${colors.secondary}
-
-[module/lb]
-type = custom/text
-content = " {"
-content-foreground = #909090
-
-[module/rb]
-type = custom/text
-content = "} "
-content-foreground = #909090
+date = %a %b %d %H:%M
+format-underline = #97d0e8
 
 [settings]
 screenchange-reload = true
