--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -3,3 +3,14 @@ detect-client-opacity = true;
 unredir-if-possible = true
 detect-transient = true;
 log-level = "warn";
+
+shadow = true;
+
+inactive-dim = 0.22;
+
+wintypes:
+{
+  dock = { shadow = false }
+  dnd = { shadow = false }
+  popup_menu = {shadow=false}
+};
