--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,5 +1,5 @@
 [colors]
-background = #fa151515
+background = #f4151515
 foreground = #d8d0d5
 primary = #d895ee
 secondary = #ee95d2
@@ -7,6 +7,7 @@ muted = #909090
 
 [bar/cat]
 font-0 = Sarasa Term J:size=12;3
+font-1 = Papyrus:size=14;3
 height = 26pt
 
 background = ${colors.background}
@@ -82,7 +83,7 @@ click-right = pavucontrol
 [module/clock]
 type = internal/date
 
-date = %a %b %d %H:%M
+date = %a %b %d %H:%M %{T2}Paggles
 format-underline = #97d0e8
 
 [settings]
