--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -3,6 +3,7 @@ detect-client-opacity = true;
 unredir-if-possible = true
 detect-transient = true;
 log-level = "warn";
+backend = "glx";
 
 shadow = true;
 
