--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,3 +1,6 @@
+[general]
+import = ["thorns.toml"]
+
 [font]
 size = 12.0
 
@@ -21,27 +24,3 @@ blinking = "On"
 
 [colors]
 transparent_background_colors = true
-
-[colors.primary]
-background = "#121212"
-foreground = "#d8d0d5"
-
-[colors.bright]
-black = "#909090"
-blue = "#979ae8"
-cyan = "#97d0e8"
-green = "#9be099"
-magenta = "#ca97e8"
-red = "#ee9598"
-white = "#fcf0f8"
-yellow = "#e8d097"
-
-[colors.normal]
-black = "#404040"
-blue = "#979ae8"
-cyan = "#97d0e8"
-green = "#9be099"
-magenta = "#ca97e8"
-red = "#ee9598"
-white = "#fcf0f8"
-yellow = "#e8d097"
