--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,20 +1,17 @@
 [colors]
 background = #fa181818
 foreground = #d8d0d5
-primary = #d895ee
-secondary = #ee95d2
 muted = #909090
 
 [bar/cat]
 font-0 = Sarasa Term J:size=12;3
-font-1 = Papyrus:size=14;3
+font-1 = Twemoji:scale=6;3
 height = 26pt
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 2
-line-color = ${colors.primary}
 
 wm-restack = bspwm
 
@@ -23,30 +20,18 @@ border-right-size = 8
 border-top-size = 8
 
 module-margin-right = 2
-padding-right = 2
+padding = 2
 
-modules-left = bspwm
+modules-left = window
 modules-center = playerctl
 modules-right = cpu memory pulseaudio clock
 
-tray-position = right
-tray-background = #383838
+scroll-up = bspc desktop prev -f
+scroll-down = bspc desktop next -f
 
-[module/bspwm]
-type = internal/bspwm
-
-label-focused = " %name% "
-label-focused-foreground = ${colors.background}
-label-focused-background = ${colors.primary}
-
-label-occupied = " %name% "
-
-label-empty = " %name% "
-label-empty-foreground = ${colors.muted}
-
-label-urgent = " ! "
-label-urgent-foreground = ${colors.background}
-label-urgent-background = ${colors.secondary}
+[module/window]
+type = internal/xwindow
+label = %title:0:48:…%
 
 [module/playerctl]
 type = custom/script
@@ -83,7 +68,7 @@ click-right = pavucontrol
 [module/clock]
 type = internal/date
 
-date = %a %b %d %H:%M %{T2}Paggles
+date = %a %b %d %H:%M
 format-underline = #97d0e8
 
 [settings]
