--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -10,7 +10,8 @@ inactive-dim = 0.22;
 
 wintypes:
 {
-  dock = { shadow = false }
+  dock = { shadow = false; clip-shadow-above = true }
   dnd = { shadow = false }
-  popup_menu = { shadow = false }
+  popup_menu = { shadow = false; focus = true }
+  utility = { focus = true }
 };
