--- a/.config/conky/cal.conf
+++ b/.config/conky/cal.conf
@@ -5,7 +5,7 @@ conky.config.gap_y = conky.config.gap_x
 conky.config.draw_shades = false
 
 conky.text = [[
-$font0${execpi 3600 cal | sed 's/^Mo/${font}Mo/; s/\b'$(date +%-d)'\b/${color1}&$color/'}
+$font0${execpi 3600 cal | sed 's/^Mo/${font}&/; s/Su$/&$color0/; s/\b'$(date +%-d)'\b/${color1}&$color/'}
 ${font0}${color5}🞇 ${color}${time %H:%M}${color5} ————————————$color$font
 ]]
 
