--- a/.config/conky/cal.conf
+++ b/.config/conky/cal.conf
@@ -5,8 +5,16 @@ conky.config.gap_y = conky.config.gap_x
 conky.config.draw_shades = false
 
 conky.text = [[
-$font0${execpi 3600 cal | sed 's/^Mo/${font}&/; s/Su$/&$color0/; s/\b'$(date +%-d)'\b/${color1}&$color/'}
-${font0}${color5}🞇 ${color}${time %H:%M}${color5} ————————————$color$font
+${image /run/user/1000/mpris-art -s 160x160}
+
+
+
+
+
+
+
+${font0}$alignc${color5}————————————————————$color$font
+$font0${execpi 3600 cal -s | sed -e '1s/$/$font/' -e '2s/$/$color0/' -e 's/\b'$(date +%-d)'\b/${color1}&$color/'}
 ]]
 
 -- vim: ft=lua:
