--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -3,7 +3,7 @@ require "config"
 conky.text = [[
 $sysname $kernel
 
-${color0}Processes:$color $processes  ${color0}Running:$color $running_processes
+${color0}Processes:$color $processes  ${color0}Threads:$color $threads
 
 ${font0}${color1}🞇 ${color}disk ${color1}—————————————————————————$color$font
 
@@ -26,7 +26,8 @@ ${color2}${top name 2} $color${top cpu 2}% ${top mem 2}%
 
 ${font0}${color3}🞇 ${color}memory ${color3}———————————————————————$color$font
 
-${font0}${color3}Used: $color$mem     ${color3}Cache: $color$memeasyfree
+${font0}${color3}Used: $color$mem ${goto 146}${color3}Cached: $color$cached
+${color3}Swap: $color$swap ${goto 146}${color3}Buffer: $color$buffers
 ${color3}${memgraph 64,256}$color
 
 ${font0}name                 cpu     mem$font
