--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -6,12 +6,12 @@ backend = "glx";
 
 shadow = true;
 
-inactive-dim = 0.22;
-
-wintypes:
-{
-  dock = { shadow = false; clip-shadow-above = true }
-  dnd = { shadow = false }
-  popup_menu = { shadow = false; focus = true }
-  utility = { focus = true }
-};
+rules = (
+  { match = "!focused"; dim = 0.22 },
+  { match = "window_type = 'dock'"; shadow = false; clip-shadow-above = true; dim = 0 },
+  { match = "window_type = 'dnd'"; shadow = false },
+  { match = "window_type = 'popup_menu'"; shadow = false; dim = 0 },
+  { match = "window_type = 'utility'"; dim = 0 },
+  { match = "window_type = 'desktop'"; dim = 0 },
+  { match = "name = 'screenkey'"; shadow = false },
+)
