--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -24,7 +24,7 @@ padding = 2
 
 modules-left = window
 modules-center = playerctl
-modules-right = cpu memory pulseaudio clock
+modules-right = tray battery cpu memory pulseaudio clock
 
 scroll-up = bspc desktop prev -f
 scroll-down = bspc desktop next -f
@@ -35,14 +35,28 @@ label = %title:0:48:…%
 
 [module/playerctl]
 type = custom/script
-exec = playerctl metadata --follow --format "{{title}} / {{artist}}"
+exec = ~/.config/polybar/player-widget
 tail = true
 
-click-left = playerctl play-pause
-click-right = playerctl next
-click-middle = playerctl previous
-scroll-up = playerctl volume 0.05+
-scroll-down = playerctl volume 0.05-
+click-left    = playerctl play-pause    -p $(cat $XDG_RUNTIME_DIR/active-player)
+click-right   = playerctl next          -p $(cat $XDG_RUNTIME_DIR/active-player)
+click-middle  = playerctl previous      -p $(cat $XDG_RUNTIME_DIR/active-player)
+scroll-up     = playerctl volume 0.05+  -p $(cat $XDG_RUNTIME_DIR/active-player)
+scroll-down   = playerctl volume 0.05-  -p $(cat $XDG_RUNTIME_DIR/active-player)
+
+[module/battery]
+type = internal/battery
+
+label-discharging = %time% %percentage%% - %consumption%W
+label-charging =
+label-full =
+
+format-discharging-underline = #ee9598
+
+[module/tray]
+type = internal/tray
+
+tray-spacing = 8
 
 [module/cpu]
 type = internal/cpu
