--- a/.config/conky/cal.conf
+++ b/.config/conky/cal.conf
@@ -1,11 +1,9 @@
 require "config"
 
-conky.config.alignment = "bottom_right"
-conky.config.gap_y = conky.config.gap_x
-conky.config.draw_shades = false
+conky.config.alignment = "top_right"
 
 conky.text = [[
-${image /run/user/1000/mpris-art -s 160x160}
+${image /run/user/1000/mpris-art -s 176x176}${image calbg.png}
 
 
 
@@ -13,8 +11,11 @@ ${image /run/user/1000/mpris-art -s 160x160}
 
 
 
-${font0}$alignc${color5}————————————————————$color$font
-$font0${execpi 3600 cal -s | sed -e '1s/$/$font/' -e '2s/$/$color0/' -e 's/\b'$(date +%-d)'\b/${color1}&$color/'}
+
+
+$font0${alignc}${execpi 3600 date +'%-m月 %Y'}
+
+$font${execpi 3600 cal -s | sed -e 's/^/ /' -e '1d' -e '2s/$/$color1 /' -e 's/\b'$(date +%-d)'\b/&$color/'}
 ]]
 
 -- vim: ft=lua:
