--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -1,38 +1,40 @@
 require "config"
 
 conky.text = [[
-$sysname $kernel
+$sysname ${alignr} ${color }$processes ${color0}proc ${color}$threads ${color0}thread
 
-${color0}Processes:$color $processes  ${color0}Threads:$color $threads
+${font0 }${color1}— ${color}disk ${color1}—————————————————————————$color$font
 
-${font0}${color1}🞇 ${color}disk ${color1}—————————————————————————$color$font
+${font0 }${color1}root            ${color}${fs_used /} of ${fs_size /}
+${font  }${color1}${fs_bar 5,184 /} $color${fs_used_perc /}% used
 
-${font0}${color0}root            ${color}${fs_used /} of ${fs_size /}
-${font}${color1}${fs_bar 5,184 /} $color${fs_used_perc /}% used
+${font0 }$color1${top_io name 1} $color$font$alignr${top_io io_read 1} ${top_io io_write 1}
+${font0 }$color1${top_io name 2} $color$font$alignr${top_io io_read 2} ${top_io io_write 2}
+${font0 }$color1${top_io name 3} $color$font$alignr${top_io io_read 3} ${top_io io_write 3}
+${font0 }$color1${top_io name 4} $color$font$alignr${top_io io_read 4} ${top_io io_write 4}
 
-${font0}${color4}R $diskio_read ${goto 149}${color8}W $diskio_write
-${color4}${diskiograph_read 64,124} ${color8}${diskiograph_write 64,124}
+${font0 }${color2}— ${color}cpu ${color2}——————————————————————————$color$font
 
-${font0}${color2}🞇 ${color}cpu ${color2}——————————————————————————$color$font
-
-${font0}${color2}CPU 1 $color${cpu cpu1}% ${goto 146}${color2}CPU 3 $color${cpu cpu3}%
-${color2}CPU 2 $color${cpu cpu2}% ${goto 146}${color2}CPU 4 $color${cpu cpu4}%
-${color2}${voffset 8}${cpugraph cpu3 17,126} ${goto 146}${cpugraph cpu4 17,126}
-${cpugraph cpu3 17,126} ${goto 146}${cpugraph cpu4 17,126}
+${font0 }${color2}CPU 1 $color${cpu cpu1}% ${goto 152}${color2}CPU 3 $color${cpu cpu3}%
+${color2}CPU 2 $color${cpu cpu2}% ${goto 152}${color2}CPU 4 $color${cpu cpu4}%
+${color2}${voffset 8}${cpugraph cpu1 17,119} ${goto 152}${cpugraph cpu4 17,119}
+${color2}${cpugraph cpu3 17,119} ${goto 152}${cpugraph cpu4 17,119}
 $color
-${font0}name                 cpu     mem$font
-${color2}${top name 1} $color${top cpu 1}% ${top mem 1}%
-${color2}${top name 2} $color${top cpu 2}% ${top mem 2}%
+${font0 }${color2}${top name 1} $color$font$alignr${top cpu 1}%
+${font0 }${color2}${top name 2} $color$font$alignr${top cpu 2}%
+${font0 }${color2}${top name 3} $color$font$alignr${top cpu 3}%
+${font0 }${color2}${top name 4} $color$font$alignr${top cpu 4}%
 
-${font0}${color3}🞇 ${color}memory ${color3}———————————————————————$color$font
+${font0 }${color3}— ${color}memory ${color3}———————————————————————$color$font
 
-${font0}${color3}Used: $color$mem ${goto 146}${color3}Cached: $color$cached
-${color3}Swap: $color$swap ${goto 146}${color3}Buffer: $color$buffers
-${color3}${memgraph 64,256}$color
+${font0 }${color3}Used $color$mem ${goto 152}${color3}Cached $color$cached
+${font0 }${color3}Swap $color$swap${goto 152}${color3}Buffer $color$buffers
+${color3}${memgraph 64,255}$color
 
-${font0}name                 cpu     mem$font
-${color3}${top_mem name 1} $color${top_mem cpu 1}% ${top_mem mem 1}%
-${color3}${top_mem name 2} $color${top_mem cpu 2}% ${top_mem mem 2}%
+${font0 }${color3}${top_mem name 1} $color$font$alignr ${top_mem mem_res 1}
+${font0 }${color3}${top_mem name 2} $color$font$alignr ${top_mem mem_res 2}
+${font0 }${color3}${top_mem name 3} $color$font$alignr ${top_mem mem_res 3}
+${font0 }${color3}${top_mem name 4} $color$font$alignr ${top_mem mem_res 4}
 ]]
 
--- vim: ft=lua:
+-- vim: nobk ft=lua:
