--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -4,7 +4,7 @@ detect-transient = true;
 log-level = "warn";
 backend = "glx";
 
-shadow = true;
+#shadow = true;
 
 rules = (
   { match = "!focused"; dim = 0.22 },
@@ -15,3 +15,12 @@ rules = (
   { match = "window_type = 'desktop'"; dim = 0 },
   { match = "name = 'screenkey'"; shadow = false },
 )
+
+blur:
+{
+  method    = "gaussian";
+  size      = 5;
+  deviation = 3;
+}
+
+# vim: set nobk:
