--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,12 +1,22 @@
 [colors]
-background = #fa181818
+background = #f4181818
 foreground = #d8d0d5
 muted = #909090
+
+red    = #ee9598
+orange = #e8b197
+yellow = #e8d097
+green  = #9be099
+cyan   = #97d0e8
+blue   = #979ae8
+purple = #ca97e8
 
 [bar/cat]
 font-0 = Sarasa Term J:size=12;3
 font-1 = Twemoji:scale=6;3
 height = 26pt
+
+locale = ja_JP.utf8
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -38,11 +48,11 @@ type = custom/script
 exec = ~/.config/polybar/player-widget
 tail = true
 
-click-left    = playerctl play-pause    -p $(cat $XDG_RUNTIME_DIR/active-player)
-click-right   = playerctl next          -p $(cat $XDG_RUNTIME_DIR/active-player)
-click-middle  = playerctl previous      -p $(cat $XDG_RUNTIME_DIR/active-player)
-scroll-up     = playerctl volume 0.05+  -p $(cat $XDG_RUNTIME_DIR/active-player)
-scroll-down   = playerctl volume 0.05-  -p $(cat $XDG_RUNTIME_DIR/active-player)
+click-left   = playerctl play-pause   -p $(cat $XDG_RUNTIME_DIR/active-player)
+click-right  = playerctl next         -p $(cat $XDG_RUNTIME_DIR/active-player)
+click-middle = playerctl previous     -p $(cat $XDG_RUNTIME_DIR/active-player)
+scroll-up    = playerctl volume 0.05+ -p $(cat $XDG_RUNTIME_DIR/active-player)
+scroll-down  = playerctl volume 0.05- -p $(cat $XDG_RUNTIME_DIR/active-player)
 
 [module/battery]
 type = internal/battery
@@ -51,7 +61,7 @@ label-discharging = %time% %percentage%% - %consumption%W
 label-charging =
 label-full =
 
-format-discharging-underline = #ee9598
+format-discharging-underline = ${colors.red}
 
 [module/tray]
 type = internal/tray
@@ -63,27 +73,27 @@ type = internal/cpu
 interval = 5
 format = <label>
 label = %percentage%%
-format-underline = #e8b197
+format-underline = ${colors.orange}
 
 [module/memory]
 type = custom/script
 interval = 5
 exec = awk '/MemFree:/ { printf "%.2fG", ($2 / 1000 / 1000) }' /proc/meminfo
-format-underline = #e8d097
+format-underline = ${colors.yellow}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 label-volume = %percentage%%dB
 label-muted = %percentage%%dB
-format-volume-underline = #9be099
+format-volume-underline = ${colors.green}
 format-muted-foreground = ${colors.muted}
 click-right = pavucontrol
 
 [module/clock]
 type = internal/date
 
-date = %a %b %d %H:%M
-format-underline = #97d0e8
+date = %m月%d日 %a曜日 %H:%M
+format-underline = ${colors.cyan}
 
 [settings]
 screenchange-reload = true
