--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -4,17 +4,13 @@ detect-transient = true;
 log-level = "warn";
 backend = "glx";
 
-#shadow = true;
-
-rules = (
-  { match = "!focused"; dim = 0.22 },
-  { match = "window_type = 'dock'"; shadow = false; clip-shadow-above = true; dim = 0 },
-  { match = "window_type = 'dnd'"; shadow = false },
-  { match = "window_type = 'popup_menu'"; shadow = false; dim = 0 },
-  { match = "window_type = 'utility'"; dim = 0 },
-  { match = "window_type = 'desktop'"; dim = 0 },
-  { match = "name = 'screenkey'"; shadow = false },
-)
+rules = ({
+  match = "!focused && window_type = 'normal'";
+  dim = 0.22;
+}, {
+  match = "window_type = 'dock'";
+  blur-background = true;
+})
 
 blur:
 {
