--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,5 +1,5 @@
 detect-client-opacity = true;
-unredir-if-possible = true
+unredir-if-possible = true;
 detect-transient = true;
 log-level = "warn";
 backend = "glx";
@@ -8,8 +8,8 @@ rules = ({
   match = "!focused && window_type = 'normal'";
   dim = 0.22;
 }, {
-  match = "window_type = 'dock'";
-  blur-background = true;
+  match = "name = 'screenkey'";
+  blur-background = false;
 })
 
 blur:
