--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,5 +1,5 @@
 [colors]
-background = #e6181818
+background = #e5181818
 foreground = #d8d0d5
 muted = #909090
 
@@ -46,6 +46,7 @@ label = %title:0:48:…%
 [module/playerctl]
 type = custom/script
 exec = ~/.config/polybar/player-widget
+label = %output:0:52:…%
 tail = true
 
 click-left   = playerctl play-pause   -p $(cat $XDG_RUNTIME_DIR/active-player)
@@ -57,7 +58,7 @@ scroll-down  = playerctl volume 0.05- -p $(cat $XDG_RUNTIME_DIR/active-player)
 [module/battery]
 type = internal/battery
 
-label-discharging = %time% %percentage%% - %consumption%W
+label-discharging = %percentage%% -%consumption%W
 label-charging =
 label-full =
 
@@ -83,11 +84,10 @@ format-underline = ${colors.yellow}
 
 [module/pulseaudio]
 type = internal/pulseaudio
-label-volume = %percentage%%dB
-label-muted = %percentage%%dB
+click-right = pavucontrol
 format-volume-underline = ${colors.green}
 format-muted-foreground = ${colors.muted}
-click-right = pavucontrol
+interval = 1
 
 [module/clock]
 type = internal/date
