--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -4,20 +4,22 @@ import = ["thorns.toml"]
 [font]
 size = 12.0
 
-[font.bold_italic]
-family = "Sarasa Term J"
-style = "Bold"
-
-[font.italic]
-family = "Sarasa Term J"
-style = "Regular"
-
 [font.normal]
 family = "Sarasa Term J"
 
+[font.bold_italic]
+style = "Bold"
+
+[font.italic]
+style = "Regular"
+
 [window]
 opacity = 0.90
-padding = { x = 4, y = 4 }
+dynamic_title = true
+padding = { x = 1, y = 1 }
+
+# [colors]
+# transparent_background_colors = true
 
 [cursor.style]
 blinking = "On"
